--- a/ansible/playbooks/roles/install-cloudflared/templates/config.yml.j2
+++ b/ansible/playbooks/roles/install-cloudflared/templates/config.yml.j2
@@ -1,5 +1,5 @@
-tunnel: {{ TUNNEL_ID }}
-credentials-file: /home/{{ ansible_user }}/.cloudflared/{{ TUNNEL_ID }}.json
+tunnel: {{ CF_TUNNEL_ID }}
+credentials-file: /home/{{ ansible_user }}/.cloudflared/{{ CF_TUNNEL_ID }}.json
 
 ingress:
   - hostname: {{ site_url }}
