Install cf through apt and switch to using the root home

--- a/ansible/playbooks/roles/install-cloudflared/templates/config.yml.j2
+++ b/ansible/playbooks/roles/install-cloudflared/templates/config.yml.j2
@@ -1,5 +1,5 @@
 tunnel: {{ CF_TUNNEL_ID }}
-credentials-file: /home/{{ ansible_user }}/.cloudflared/{{ CF_TUNNEL_ID }}.json
+credentials-file: /root/.cloudflared/{{ CF_TUNNEL_ID }}.json
 
 ingress:
   - hostname: {{ SITE_URL }}
